rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-35.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts:
  template_key: template_key
  default_value: ~
builtin_constants: ~
custom_constants:
  template_key: template_key
  default_value: ~
variables:
  nonjmetext§: 1.2
grouped_variables:
  template_key: template_key
  default_value: ~
variables_test: ~
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: javascript
    output_type: nothing
    parameters: "template:template_key"
preamble: ~
navigation: ~
extensions: ~
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic: "template:template_key"
      cancel_unit_factors: "template:template_key"
      cancel_unit_powers: "template:template_key"
      cancel_unit_denominators: "template:template_key"
      cancel_zero_factors: "template:template_key"
      omit_zero_terms: "template:template_key"
      cancel_zero_powers: "template:template_key"
      cancel_powers_with_base_zero: "template:template_key"
      collect_numbers: "template:template_key"
      constants_first: "template:template_key"
      collect_sqrt_products: "template:template_key"
      collect_sqrt_divisions: "template:template_key"
      cancel_sqrt_square: "template:template_key"
      evaluate_powers_of_numbers: "template:template_key"
      rewrite_to_no_leading_minus: "template:template_key"
      simplify_fractions: "template:template_key"
      simplify_trigonometric: "template:template_key"
      collect_terms: "template:template_key"
      collect_powers_of_common_factors: "template:template_key"
      collect_like_fractions: "template:template_key"
      order_canonical: "template:template_key"
      expand_brackets: "template:template_key"

