rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-36.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: ~
builtin_constants:
  e: false
  pi: false
  i: false
custom_constants: ~
variables:
  nonjmetext§: x^5
grouped_variables: ~
variables_test:
  condition: x^5
  max_runs: 2
functions:
  nonjmetext§:
    definition:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: javascript
    output_type: number
    parameters:
      template_key: template_key
      default_value: ~
preamble:
  js: "file:path/to/file"
  css: "file:path/to/file"
navigation:
  can_regenerate: false
  show_title_page: false
  confirm_when_leaving: false
extensions:
  chemistry: false
  download_text_file: false
  eukleides: false
  geogebra: false
  graphs: false
  jsx_graph: false
  linear_algebra: false
  linear_codes: false
  optimisation: false
  permutations: false
  polynomials: false
  quantities: false
  random_person: false
  stats: false
  sqlite: false
  text: false
  written_number: false
diagnostic_topic_names: ~
resources: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic:
        template_key: template_key
        default_value: ~
      cancel_unit_factors:
        template_key: template_key
        default_value: ~
      cancel_unit_powers:
        template_key: template_key
        default_value: ~
      cancel_unit_denominators:
        template_key: template_key
        default_value: ~
      cancel_zero_factors:
        template_key: template_key
        default_value: ~
      omit_zero_terms:
        template_key: template_key
        default_value: ~
      cancel_zero_powers:
        template_key: template_key
        default_value: ~
      cancel_powers_with_base_zero:
        template_key: template_key
        default_value: ~
      collect_numbers:
        template_key: template_key
        default_value: ~
      constants_first:
        template_key: template_key
        default_value: ~
      collect_sqrt_products:
        template_key: template_key
        default_value: ~
      collect_sqrt_divisions:
        template_key: template_key
        default_value: ~
      cancel_sqrt_square:
        template_key: template_key
        default_value: ~
      evaluate_powers_of_numbers:
        template_key: template_key
        default_value: ~
      rewrite_to_no_leading_minus:
        template_key: template_key
        default_value: ~
      simplify_fractions:
        template_key: template_key
        default_value: ~
      simplify_trigonometric:
        template_key: template_key
        default_value: ~
      collect_terms:
        template_key: template_key
        default_value: ~
      collect_powers_of_common_factors:
        template_key: template_key
        default_value: ~
      collect_like_fractions:
        template_key: template_key
        default_value: ~
      order_canonical:
        template_key: template_key
        default_value: ~
      expand_brackets:
        template_key: template_key
        default_value: ~

