rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-4.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: ~
builtin_constants:
  e: ~
  pi: ~
  i: ~
custom_constants: ~
variables:
  nonjmetext§: nonjmetext§
grouped_variables:
  nonjmetext§:
    nonjmetext§: nonjmetext§
variables_test:
  condition: ~
  max_runs: ~
functions:
  nonjmetext§:
    definition:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: expression
    parameters: ~
preamble:
  js: ~
  css: ~
navigation:
  can_regenerate: ~
  show_title_page: ~
  confirm_when_leaving: ~
extensions:
  chemistry: ~
  download_text_file: ~
  eukleides: ~
  geogebra: ~
  graphs: ~
  jsx_graph: ~
  linear_algebra: ~
  linear_codes: ~
  optimisation: ~
  permutations: ~
  polynomials: ~
  quantities: ~
  random_person: ~
  stats: ~
  sqlite: ~
  text: ~
  written_number: ~
diagnostic_topic_names: ~
resources: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Display
    rules:
      broken_as_fractions: false
      mixed_fractions: false
      flat_fractions: false
      vector_as_row: false
      always_show_multiplication_sign: false
      use_dot_as_multiplication_sign: false
      matrices_without_parentheses: false

