rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-6.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"

---
statement: ~
advice: ~
parts: ~
builtin_constants:
  e: false
  pi: false
  i: false
custom_constants: ~
variables:
  nonjmetext§: "1 .. 1#-0.1"
variables_test:
  condition: x^5
  max_runs: 2
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: javascript
    output_type: integer
    parameters: ~
preamble:
  js: "file:path/to/file"
  css: "file:path/to/file"
navigation:
  can_regenerate: false
  show_title_page: false
  confirm_when_leaving: false
extensions:
  chemistry: false
  download_text_file: false
  eukleides: false
  geogebra: false
  graphs: false
  jsx_graph: false
  linear_algebra: false
  linear_codes: false
  optimisation: false
  permutations: false
  polynomials: false
  quantities: false
  random_person: false
  stats: false
  sqlite: false
  text: false
  written_number: false
diagnostic_topic_names: ~
resources: ~
custom_part_types: ~

