rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-7.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  template_key: template_key
  default_value: ~
advice:
  template_key: template_key
  default_value: ~
parts:
  template_key: template_key
  default_value: ~
builtin_constants: ~
custom_constants:
  template_key: template_key
  default_value: ~
variables:
  nonjmetext§: "10 .. 1#5"
grouped_variables:
  nonjmetext§:
    nonjmetext§: "10 .. 1#5"
variables_test: ~
functions:
  nonjmetext§:
    definition:
      template_key: template_key
      default_value: ~
    language: jme
    output_type: key_pair
    parameters:
      template_key: template_key
      default_value: ~
preamble: ~
navigation: ~
extensions: ~
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets:
  nonjmetext§: "template:template_key"

