rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-8.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: "template:template_key"
builtin_constants:
  e: ~
  pi: ~
  i: ~
custom_constants: "template:template_key"
variables:
  nonjmetext§: "-10 .. 1#0.1"
variables_test:
  condition: ~
  max_runs: ~
functions:
  nonjmetext§:
    definition:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: javascript
    output_type: list
    parameters: "template:template_key"
preamble:
  js: ~
  css: ~
navigation:
  can_regenerate: ~
  show_title_page: ~
  confirm_when_leaving: ~
extensions:
  chemistry: ~
  download_text_file: ~
  eukleides: ~
  geogebra: ~
  graphs: ~
  jsx_graph: ~
  linear_algebra: ~
  linear_codes: ~
  optimisation: ~
  permutations: ~
  polynomials: ~
  quantities: ~
  random_person: ~
  stats: ~
  sqlite: ~
  text: ~
  written_number: ~
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic: false
      cancel_unit_factors: false
      cancel_unit_powers: false
      cancel_unit_denominators: false
      cancel_zero_factors: false
      omit_zero_terms: false
      cancel_zero_powers: false
      cancel_powers_with_base_zero: false
      collect_numbers: false
      constants_first: false
      collect_sqrt_products: false
      collect_sqrt_divisions: false
      cancel_sqrt_square: false
      evaluate_powers_of_numbers: false
      rewrite_to_no_leading_minus: false
      simplify_fractions: false
      simplify_trigonometric: false
      collect_terms: false
      collect_powers_of_common_factors: false
      collect_like_fractions: false
      order_canonical: false
      expand_brackets: false

